# project_jpo

./: CMakeLists.txt  README.md
rapacz_project/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
